src/test/ui/span/mut-ptr-cant-outlive-ref.stderr
error[E0597]: `b` does not live long enough
  --> $DIR/mut-ptr-cant-outlive-ref.rs:8:15
   |
LL |         p = &*b;
   |               ^ borrowed value does not live long enough
LL |     }
   |     - `b` dropped here while still borrowed
LL |
LL |     p.use_ref();
   |     - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
